--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "indomitable",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "A lightweight (the actual ship is heavy though), performat & powerful sharder for Discord.JS. Indomitable uses cluster module to evenly spread her weight (load) across your cores.",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && npm run build:esm && npm run build:docs",
+    "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
+    "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
+    "prepare": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,12 +30,16 @@
   "dependencies": {
     "net-ipc": "^2.0.1"
   },
+  "optionalDependencies": {
+    "fast-zlib": "^2.0.1",
+		"msgpackr": "^1.3.2"
+  },
   "devDependencies": {
     "@augu/eslint-config": "^2.2.0",
-    "@types/node": "^17.0.40",
+    "@types/node": "^17.0.43",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
     "gen-esm-wrapper": "^1.1.3",
     "ts-node": "^10.8.1",
