--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "dependencies": {
     "net-ipc": "^2.0.1"
   },
+  "peerDependencies": {
+    "discord.js": ">=13.0.0"
+  },
   "optionalDependencies": {
     "fast-zlib": "^2.0.1",
 		"msgpackr": "^1.3.2"
