--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
     "ts-node": "^10.8.2",
     "typedoc": "^0.23.5",
     "typescript": "^4.7.3"
+  },
+  "optionalDependencies": {
+    "@discordjs/collection": "^1.5.0",
+    "@sapphire/async-queue": "^1.5.0",
+    "vanguard": "github:Deivu/Vanguard"
   }
 }
