--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "indomitable",
   "version": "2.1.0",
   "description": "A lightweight (the actual ship is heavy though), performant, powerful & no dependency sharder for Discord.JS",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/build/cjs/index.js",
+  "module": "dist/build/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts",
+      "default": "./dist/build/esm/index.js"
     }
   },
   "scripts": {
-    "build": "tsc && npm run build:esm && npm run build:docs",
-    "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
+    "build": "npm run build:ts && npm run build:docs",
+    "build:ts": "tsc -p tsconfig-types.json && tsc -p tsconfig-esm.json && tsc -p tsconfig-cjs.json",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
-    "prepare": "tsc && npm run build:esm"
+    "prepare": "npm run build:ts"
   },
   "keywords": [
     "cluster",
@@ -45,14 +47,13 @@
   },
   "devDependencies": {
     "@augu/eslint-config": "^2.2.0",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.16.0",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "gen-esm-wrapper": "^1.1.3",
-    "ts-node": "^10.8.2",
-    "typedoc": "^0.23.5",
-    "typescript": "^4.7.3"
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "tsup": "^6.7.0",
+    "typedoc": "^0.24.6",
+    "typescript": "^5.0.4"
   }
 }
