--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
+      "import": "./dist/build/esm/index.js",
+      "require": "./dist/build/cjs/index.js",
       "types": "./dist/types/index.d.ts",
       "default": "./dist/build/esm/index.js"
     }
