--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "indomitable",
   "version": "2.1.0",
   "description": "A lightweight (the actual ship is heavy though), performant, powerful & no dependency sharder for Discord.JS",
-  "main": "dist/build/cjs/index.js",
-  "module": "dist/build/esm/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/build/esm/index.js",
-      "require": "./dist/build/cjs/index.js",
-      "types": "./dist/types/index.d.ts",
-      "default": "./dist/build/esm/index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
     }
   },
   "scripts": {
     "build": "npm run build:ts && npm run build:docs",
-    "build:ts": "tsc -p tsconfig-types.json && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+    "build:ts": "tsup --config tsup.config.json",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
     "prepare": "npm run build:ts"
   },
