--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "module": "es2022",
+    "module": "es2020",
     "moduleResolution": "node16",
-    "outDir": "dist/build/esm",
-    "target": "es2022",
+    "outDir": "dist",
+    "target": "es2020",
+    "declaration": true,                              
+    "declarationMap": true, 
+    "sourceMap": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": true
   }
 }
