--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,15 @@
 .github
 .idea
 .vscode
-assets/
-docs/
-src/
 .eslintignore
 .eslintrc.json
 .gitattributes
 .gitignore
+assets/
+docs/
+src/
 index.ts
-**.tgz
 tsconfig.json
-tsconfig-**.json
-tsup.config.json
+tsup-config.json
+**.tgz
+**.md
