--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "indomitable",
-  "version": "2.1.0",
+  "version": "2.3.0-dev",
   "description": "A lightweight (the actual ship is heavy though), performant, powerful & no dependency sharder for Discord.JS",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -41,7 +41,8 @@
   },
   "homepage": "https://github.com/Deivu/Indomitable#readme",
   "peerDependencies": {
-    "discord.js": "*"
+    "discord.js": ">=14.10.x",
+    "@discordjs/ws": ">=0.8.2"
   },
   "devDependencies": {
     "@augu/eslint-config": "^2.2.0",
@@ -54,10 +55,5 @@
     "ts-node": "^10.8.2",
     "typedoc": "^0.23.5",
     "typescript": "^4.7.3"
-  },
-  "optionalDependencies": {
-    "@discordjs/collection": "^1.5.0",
-    "@sapphire/async-queue": "^1.5.0",
-    "vanguard": "github:Deivu/Vanguard"
   }
 }
