--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "indomitable",
-  "version": "2.3.0-dev",
+  "version": "2.3.0",
   "description": "A lightweight (the actual ship is heavy though), performant, powerful & no dependency sharder for Discord.JS",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
     }
   },
   "scripts": {
-    "build": "tsc && npm run build:esm && npm run build:docs",
-    "build:esm": "gen-esm-wrapper dist/index.js dist/index.mjs",
+    "build": "npm run build:ts && npm run build:docs",
+    "build:ts": "tsup --config tsup-config.json",
     "build:docs": "typedoc --theme default --readme README.md --out docs/ --entryPointStrategy expand src/.",
-    "prepare": "tsc && npm run build:esm"
+    "prepare": "npm run build:ts"
   },
   "keywords": [
     "cluster",
@@ -46,14 +48,13 @@
   },
   "devDependencies": {
     "@augu/eslint-config": "^2.2.0",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.16.0",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "gen-esm-wrapper": "^1.1.3",
-    "ts-node": "^10.8.2",
-    "typedoc": "^0.23.5",
-    "typescript": "^4.7.3"
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "tsup": "^6.7.0",
+    "typedoc": "^0.24.6",
+    "typescript": "^5.0.4"
   }
 }
