--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,14 @@
     "parser": "@typescript-eslint/parser",
     "extends": "@augu",
     "rules": {
-        "indent": ["error", 4],
-        "camelcase": "off"
+        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "quotes": ["error", "single"],
+        "brace-style": ["error", "1tbs"],
+        "array-bracket-spacing": ["error", "always"],
+        "block-spacing": ["error", "always"],
+        "arrow-spacing": "error",
+        "switch-colon-spacing": ["error", {"after": true, "before": false}],
+        "camelcase": "off",
+        "require-await": "error"
     }
 }
