fix: add thread file as an entry

--- a/tsup-config.json
+++ b/tsup-config.json
@@ -1,6 +1,6 @@
 {
     "dts": true,
-    "entry": ["index.ts"],
+    "entry": ["index.ts", "src/strategy/Thread.ts"],
     "splitting": false,
     "sourcemap": true,
     "clean": true,
