--- a/tsup-config.json
+++ b/tsup-config.json
@@ -4,5 +4,6 @@
     "splitting": false,
     "sourcemap": true,
     "clean": true,
-    "format": ["esm", "cjs"]
+    "format": ["esm", "cjs"],
+    "shims": true
 }
