feat: refactored concurrency handling & ipc messages + new strategy for @discordjs/ws (#5)
* feat: refactor ipc & new worker strategy

* chore: add a space

* fix: remove unused import

* fix: add thread file as an entry

* fix: filename import

* fix: use join instead

* fix: enable shims

* fix: worker path

* feat: improve ipc inheritance and code further

--- a/tsup-config.json
+++ b/tsup-config.json
@@ -1,8 +1,9 @@
 {
     "dts": true,
-    "entry": ["index.ts"],
+    "entry": ["index.ts", "src/strategy/Thread.ts"],
     "splitting": false,
     "sourcemap": true,
     "clean": true,
-    "format": ["esm", "cjs"]
+    "format": ["esm", "cjs"],
+    "shims": true
 }
