--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   },
   "homepage": "https://github.com/Deivu/Indomitable#readme",
   "peerDependencies": {
-    "discord.js": ">=14.10.x",
-    "@discordjs/ws": ">=0.8.3"
+    "@discordjs/ws": ">=0.8.3",
+    "discord.js": ">=14.10.x"
   },
   "devDependencies": {
     "@augu/eslint-config": "^4.0.1",
@@ -57,5 +57,8 @@
     "tsup": "^7.0.0",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "kearsarge": "github:Deivu/Kearsarge"
   }
 }
