--- a/package.json
+++ b/package.json
@@ -44,18 +44,21 @@
   },
   "homepage": "https://github.com/Deivu/Indomitable#readme",
   "peerDependencies": {
-    "discord.js": ">=14.10.x",
-    "@discordjs/ws": ">=1.0.0"
+    "@discordjs/ws": ">=1.0.x",
+    "discord.js": ">=14.14.x"
   },
   "devDependencies": {
-    "@augu/eslint-config": "^4.0.1",
-    "@types/node": "^20.3.1",
-    "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "eslint": "^8.43.0",
-    "tsup": "^7.0.0",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.1.3"
+    "@augu/eslint-config": "^5.0.0",
+    "@types/node": "^20.10.5",
+    "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "tsup": "^8.0.1",
+    "typedoc": "^0.25.4",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@discordjs/collection": "^2.0.0"
   }
 }
