--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "indomitable",
-  "version": "4.0.3",
-  "description": "A lightweight (the actual ship is heavy though), performant, powerful & no dependency sharder for Discord.JS",
+  "version": "4.1.0",
+  "description": "A lightweight (the actual ship is heavy though), performant, powerful sharder for Discord.JS",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
